--- a/conference.html
+++ b/conference.html
@@ -59,7 +59,7 @@
 							<section>
 								<p> TMSCA hosts an annual stem cell conference at UC Berkeley that brings together incredible researchers, patient advocates, and students in the stem cell community. Our previous conferences have provided a platform for key experts to share their work and the exciting possibilities for the future of stem cell therapies. Past speakers include Dr. Irving Weissman, Dr. Arnold Kriegstein, Dr. David Schaffer, and Dr. Bruce Conklin.</p>
 
-								<p><b>Spring 2022 Updates:</b> We are currently planning for our next conference to be around mid-late April!</p>
+								<p><b>Fall 2022 Updates:</b> Our next conference will be Feb 25, 2023! Add it to your calendars because it's going to be the largest one we've ever had!</p>
 
 							<!-- Image -->
 
