--- a/partners.html
+++ b/partners.html
@@ -46,7 +46,6 @@
 							<li><a href="conference.html">Conference</a></li>
 							<li><a href="partners.html">Partners</a></li>
 							<li><a href="get_involved.html">Get Involved</a></li>
-							<li><a href="healthfirst.html">HealthFirst Incubator [NEW!]</a></li>
 							<li><a href="research_teams.html">Clinical Research Teams [NEW!]</a></li>
 							<li><a href="https://www.notion.so/TMSCA-Event-Calendar-2903ff05272344a7a9b9d0f321a314ee" target="_blank" rel="noopener noreferrer">Calendar</a></li>
 						</ul>
@@ -67,7 +66,7 @@
 											<div class="col-4"><span class="image fit"><a href="https://stemcellcenter.berkeley.edu"><img src="images/partners/sccenter.jpg" alt="" /></a></span></div>
 											<div class="col-4"><span class="image fit"><a href="https://www.cirm.ca.gov/"><img src="images/partners/cirm.jpg" alt="" /></a></span></div>
 											<div class="col-4"><span class="image fit"><a href="https://www.princetonreview.com/"><img src="images/partners/prince.jpg" alt="" /></a></span></div>
-
+											<div class="col-4"><span class="image fit"><a href="https://www.numerade.com/?utm_source=other&utem_medium=referral&utm_campaign=edu"><img src="images/partners/numerade_border.jpg" alt="" /></a></span></div>
 
 
 										</div>
