--- a/merch.html
+++ b/merch.html
@@ -42,7 +42,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="officers.html">Officers</a></li>
 							<li><a href="committees.html">Committees</a></li>
-							<li><a href="https://www.notion.so/TMSCA-Event-Calendar-2903ff05272344a7a9b9d0f321a314ee">Events</a></li>
+							<li><a href="https://calendar.google.com/calendar/u/0?cid=Y184aWNjdWg4bHJvb25rdDFyY25mbzJ2YnFzb0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t">Events</a></li>
 							<li><a href="conference.html">Conference</a></li>
 							<li><a href="partners.html">Partners</a></li>
 							<li><a href="get_involved.html">Get Involved</a></li>
