--- a/partners.html
+++ b/partners.html
@@ -47,7 +47,7 @@
 							<li><a href="partners.html">Partners</a></li>
 							<li><a href="get_involved.html">Get Involved</a></li>
 							<li><a href="research_teams.html">Clinical Research Teams [NEW!]</a></li>
-							<li><a href="https://www.notion.so/TMSCA-Event-Calendar-2903ff05272344a7a9b9d0f321a314ee" target="_blank" rel="noopener noreferrer">Calendar</a></li>
+							<li><a href="https://calendar.google.com/calendar/u/0?cid=Y184aWNjdWg4bHJvb25rdDFyY25mbzJ2YnFzb0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t" target="_blank" rel="noopener noreferrer">Calendar</a></li>
 						</ul>
 					</nav>
 
