--- a/officers.html
+++ b/officers.html
@@ -58,21 +58,24 @@
 						<h1>Officers</h1>
 
 							<h2>Executive Board</h2>
-							<p><span class="image left"><img src="images/rich.png" alt="" /></span><b>Richard Ruan - [Co-President] </b> <a href="https://www.linkedin.com/in/richardruan2/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
-								is a senior majoring in Bioengineering with concentration in Cell and Tissue Engineering and a minor in Data Science. He's previously done research at USC Stem Cell, UCSF Pulmonary Immunology, UCSF Neurological Surgery, and UCSF Hepatology; and is currently researching Dengue Virus NS1 and SARS-CoV-2 Spike pathogeneses as part of the <b><a href="https://www.harrisresearchprogram.org">Harris Lab</a></b> in the UC Berkeley School of Public Health. After gaining such a diverse set of research experiences involving stem cells in the Bay Area, he has a passion for helping people finding the right opportunity to realize their research passion areas.</p><br>
+							<p><span class="image left"><img src="images/sofi.png" alt="" /></span><b>Sofia Theodoras - [Co-President]</b> <a href="https://www.linkedin.com/in/sofia-theodoras/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
+								is a junior studying Molecular and Cell Biology (Immunology track) and Computer Science who is interested in immunology and genetics. 
+								As an undergraduate researcher in the <b><a href="https://conboylab.berkeley.edu">Conboy Lab</a></b>, she's putting the research skills he gained in TMSCA to good use as she investigates stem cell biology and the mechanisms of aging. 
+								In her free time she trains her cats in both obedience and agility, and she loves cooking/baking.</p><br><br><br><br>
 
-							<p><span class="image left"><img src="images/juli.png" alt="" /></span><b>Julia Driscoll - [Co-President] </b> <a href="https://www.linkedin.com/in/julia-n-driscoll/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
-								is a senior majoring in Chemical Biology and Nutritional Sciences: Physiology and Metabolism. She came to Berkeley from Connecticut, but is originally from Texas. Julia joined TMSCA because in high school she did research on stem cell applications in disease, specifically skin diseases, which inspired her to pursue a degree in the life sciences. She hopes that by spreading awareness to high school students about this exciting area of research, she can inspire more people to start early pursuits of similar careers. She is aiming to become a pediatrician to help improve the health and lives of children.</p><br>
+							<p><span class="image left"><img src="images/jack.png" alt="" /></span><b>Jack Wong - [Co-President]</b><br>
+								is a junior from Hong Kong majoring in Molecular and Cell Biology and minoring in Data Science. 
+								He joined TMSCA in his freshmen year because he was interested in learning more about stem cells and getting involved with research at Berkeley. 
+								He hopes that through this experience, he can find his specific career pathway within the realm of health sciences and help others to do so as well.</p><br><br>
 
-							<p><span class="image left"><img src="images/timo.png" alt="" /></span><b>Timothy Chang - [Co-President] </b> <a href="https://www.linkedin.com/in/timothy-chang-095093197/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
-								is a senior studying Chemistry. He joined TMSCA in his freshman year because he was really interested in getting involved in stem cell research at Berkeley, as well as helping inform the public about the realities of stem cell therapies. As an undergraduate researcher in the <b><a href="https://conboylab.berkeley.edu">Conboy Lab</a></b>, he's putting the research skills he gained in TMSCA to good use as he investigates stem cell biology and the mechanisms of aging. He is currently pursuing a career in biotechnology or pharmaceutical research so that he can contribute to new discoveries that can greatly benefit public health.</p><br><br>
+							<p><span class="image left"><img src="images/timo.png" alt="" /></span><b>Timothy Chang - [Events Coordinator] </b> <a href="https://www.linkedin.com/in/timothy-chang-095093197/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
+								is a senior studying Chemistry. He joined TMSCA in his freshman year because he was really interested in getting involved in stem cell research at Berkeley, as well as helping inform the public about the realities of stem cell therapies. 
+								As an undergraduate researcher in the <b><a href="https://conboylab.berkeley.edu">Conboy Lab</a></b>, he's putting the research skills he gained in TMSCA to good use as he investigates stem cell biology and the mechanisms of aging. 
+								He is currently pursuing a career in biotechnology or pharmaceutical research so that he can contribute to new discoveries that can greatly benefit public health.</p><br><br>
 
 							<h2>Committee Coordinators</h2>
 							<p><span class="image left"><img src="images/deir.png" alt="" /></span><b>Deirdre Hanley - [Academia Coordinator]</b> <a href="https://www.linkedin.com/in/deirdrehanley/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
 								is a 4th-year studying Biochemistry and Chemistry. Getting involved in TMSCA at Berkeley taught her all the versatile ways that stem cells could be used in medicine, which open doors to new discoveries. Stem cells are a new and exciting way to design medicines and treat patients. She plans on pursuing a PhD in her effort to make new, serendipitous findings and make better therapies for patients.</p><br><br>
-
-							<p><span class="image left"><img src="images/sofi.png" alt="" /></span><b>Sofia Theodoras - [Academia Coordinator]</b> <a href="https://www.linkedin.com/in/sofia-theodoras/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
-								is an intended Molecular and Cell Biology and Computer Science double-major who is interested in immunology and genetics. In her free time she trains her cats in both obedience and agility, and she loves cooking/baking.</p><br><br><br><br>
 
 							<p><span class="image left"><img src="images/alli.png" alt="" /></span><b>Allison Lee - [Outreach Coordinator]</b> <a href="https://www.linkedin.com/in/allisonannlee/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
 								is a 2nd-year studying Molecular and Cell Biology. As a TMSCA outreach chair, she is excited to work with the committee to impact high school students and inspire their interest in stem cell research. She's looking forward to a great year!</p><br><br><br><br>
@@ -80,9 +83,7 @@
 							<p><span class="image left"><img src="images/yeaj.png" alt="" /></span><b>Yea-Jin Lee - [Outreach Coordinator]</b><br>
 								is a sophomore majoring in Chemical Biology and minoring in Global Public Health on the pre-medicine track. She joined TMSCA last year as a freshman to gain a deeper understanding of stem cells. Through outreach committee, she hopes to educate and encourage high school students to learn more about stem cells.</p><br><br><br>
 
-							<p><span class="image left"><img src="images/jack.png" alt="" /></span><b>Jack Wong - [Events Coordinator]</b><br>
-								is a sophomore from Hong Kong majoring in Molecular and Cell Biology and minoring in Data Science. He joined TMSCA in his freshmen year because he was interested in learning more about stem cells and getting involved with research at Berkeley. He hopes that through this experience, he can find his specific career pathway within the realm of health sciences and help others to do so as well.</p><br><br>
-
+							
 
 
 					</div>
