--- a/partners.html
+++ b/partners.html
@@ -66,7 +66,7 @@
 											<div class="col-4"><span class="image fit"><a href="https://stemcellcenter.berkeley.edu"><img src="images/partners/sccenter.jpg" alt="" /></a></span></div>
 											<div class="col-4"><span class="image fit"><a href="https://www.cirm.ca.gov/"><img src="images/partners/cirm.jpg" alt="" /></a></span></div>
 											<div class="col-4"><span class="image fit"><a href="https://www.princetonreview.com/"><img src="images/partners/prince.jpg" alt="" /></a></span></div>
-											<div class="col-4"><span class="image fit"><a href="https://www.numerade.com/?utm_source=other&utem_medium=referral&utm_campaign=edu"><img src="images/partners/numerade_border.jpg" alt="" /></a></span></div>
+											<!-- <div class="col-4"><span class="image fit"><a href="https://www.numerade.com/?utm_source=other&utem_medium=referral&utm_campaign=edu"><img src="images/partners/numerade_border.jpg" alt="" /></a></span></div> -->
 
 
 										</div>
