--- a/officers.html
+++ b/officers.html
@@ -58,7 +58,7 @@
 						<h1>Officers</h1>
 
 							<h2>Executive Board Spring 2023</h2>
-							<p><span class="image left"><img src="images/sofi.jpeg" alt="" /></span><b>Sofia Theodoras (she/her) - [Co-President]</b> <a href="https://www.linkedin.com/in/sofia-theodoras/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
+							<p><span class="image left"><img src="images/sofi.png" alt="" /></span><b>Sofia Theodoras (she/her) - [Co-President]</b> <a href="https://www.linkedin.com/in/sofia-theodoras/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
 								is a junior studying Molecular and Cell Biology (Immunology track) and Computer Science who is interested in immunology and genetics. 
 								As an undergraduate researcher in the <b><a href="https://conboylab.berkeley.edu">Conboy Lab</a></b>, she's putting the research skills he gained in TMSCA to good use as she investigates stem cell biology and the mechanisms of aging. 
 								In her free time she trains her cats in both obedience and agility, and she loves cooking/baking.</p><br><br><br><br>
