ugh vitto what did u do

--- a/officers.html
+++ b/officers.html
@@ -58,7 +58,7 @@
 						<h1>Officers</h1>
 
 							<h2>Executive Board Spring 2023</h2>
-							<p><span class="image left"><img src="images/sofi.png" alt="" /></span><b>Sofia Theodoras (she/her) - [Co-President]</b> <a href="https://www.linkedin.com/in/sofia-theodoras/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
+							<p><span class="image left"><img src="images/sofia.png" alt="" /></span><b>Sofia Theodoras (she/her) - [Co-President]</b> <a href="https://www.linkedin.com/in/sofia-theodoras/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
 								is a junior studying Molecular and Cell Biology (Immunology track) and Computer Science who is interested in immunology and genetics. 
 								As an undergraduate researcher in the <b><a href="https://conboylab.berkeley.edu">Conboy Lab</a></b>, she's putting the research skills he gained in TMSCA to good use as she investigates stem cell biology and the mechanisms of aging. 
 								In her free time she trains her cats in both obedience and agility, and she loves cooking/baking.</p><br><br><br><br>
@@ -79,7 +79,7 @@
 								is a Microbial Biology major at UC Berkeley and is a research assistant at <b><a href="https://www.ocf.berkeley.edu/~ahsleep/sleepteam/">GBSMRC</a></b>. In his free time, he enjoys traveling, sports, and the outdoors. </p><br><br><br>
 							<p><span class="image left"><img src="images/chri.jpeg" alt="" /></span><b>Christine Zhu (she/her) - [Outreach Coordinator] </b><a href="https://www.linkedin.com/in/christine-zhu-4b3856187/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
 								is a Public Health/Data Science major, doing the research in <b><a href="https://niyogilab.berkeley.edu/">Niyogi Lab</a></b> on Chromochloris zofingiensis algae to try to understand the role of hexokinase in biosynthesis. Her hobbies are knitting, crochet, pottery, reading, and hiking. </p><br><br><br>
-							<p><span class="image left"><img src="images/sabr.jpeg" alt="" /></span><b>Sabrina Fong (she/her) - [Industry Relations] </b><a href="https://www.linkedin.com/in/sabrina-c-fong/" class="icon brands style1 fa-linkedin"><span class="label">LinkedIn</span></a><br>
+							<p><span class="image left"><img src="images/sabr.jpeg" alt="" /></span><b>Sabrina Fong (she/her) - [Industry Relations] </b><a href="https://www.linkedin.com/in/sabrina-c-fong/" class="icon brands style1 fa-linkedin" height = "300" width = "400"><span class="label">LinkedIn</span></a><br>
 								is a MCB major researching abnormal metabolisms in cancer, senescence, and fibrosis in the <b><a href="https://conboylab.berkeley.edu">Conboy Lab</a></b>. She is interested in supporting innovation and delivering novel therapies to patients. When not hanging out with people from TMSCA, she enjoys reading, sketching, and trying new food! </p><br><br><br>
 				
 					
