--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Translational Medicine and Stem Cell Association</h1>
+								<h1>Sofia's Translational Medicine and Stem Cell Association</h1>
 								<p>We are a student organization at the <b>University of California, Berkeley</b> dedicated to increasing public support for stem cell research, acquainting our members with the research landscape at Berkeley and the Bay Area, and assisting our members in achieving their professional goals in the life sciences. We have hosted a variety of guest speakers from academia, industry, and healthcare at our meetings.
 							</p>
 							<ul class="actions">
-								<li><a href="https://linktr.ee/tmscaatcal" class="button" target="_blank">Fall 2023 Recruitment is Open!</a></li>
+								<li><a href="https://linktr.ee/tmscaatcal" class="button" target="_blank">Spring 2024 Recruitment is Open!</a></li>
 								<li><a href="mailto: tmscaberkeley@gmail.com" class="button">Contact Us</a></li>
 							</ul>
 								<hr />
